Set UA override flag for Renderer-initiated NavigationRequest

Use last committed NavigationEntry instead of the pending endtry
(which can be null) to have the user agent override flag stick
across navigations. The entry can affect navigation entry id
but it is safe to replace it since the id used for browser-initiated
navigation only.

BUG=734772

Change-Id: Icb34f55af82bafde5a3c0e1457fa25c1172db9d0